chore: Add dev:json script for running json-server

--- a/apps/customer/package.json
+++ b/apps/customer/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dev:json": "json-server --watch ../common/database/db.json --port 3004"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "json-server": "^1.0.0-beta.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
