--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -15,7 +15,8 @@
     "json-server": "^1.0.0-beta.2",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tsyringe": "^4.8.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
