--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:next\" \"npm run dev:json\"",
     "dev:next": "next dev -p 3002",
-    "dev:json": "json-server --watch ../common/database/db.json --port 3004",
+    "dev:json": "json-server --watch ./database/db.json --port 3004",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
