--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "packageManager": "npm@9.6.6",
   "dependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "sass": "^1.77.8"
   }
 }
