--- a/packages/package.json
+++ b/packages/package.json
@@ -11,13 +11,14 @@
   "description": "",
   "dependencies": {
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8"
+    "eslint": "^8",
+    "typescript": "^5"
   }
 }
