--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:next\" \"npm run dev:json\"",
     "dev:next": "next dev -p 3002",
-    "dev:json": "json-server --watch ./database/db.json --port 3004",
+    "dev:json": "json-server --watch ../common/database/db.json --port 3004",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -13,6 +13,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.4",
+    "json-server": "^1.0.0-beta.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
