--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -17,7 +17,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "tsyringe": "^4.8.0"
+    "tsyringe": "^4.8.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
