David Blandon - Adding Globals: styling, layouts and components

--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -10,7 +10,8 @@
   },
   "include": [
     "src",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "../common/src/Declarations"
   ],
   "exclude": [
     "node_modules"
