--- a/apps/ui-documentation/tsconfig.json
+++ b/apps/ui-documentation/tsconfig.json
@@ -10,6 +10,7 @@
   },
   "include": [
     "src",
-    ".next/types/**/*.ts"
-  ]
+    ".next/types/**/*.ts",
+    "../../packages/utils",
+    "../common/src/Declarations"  ]
 }
