--- a/apps/auth/tsconfig.json
+++ b/apps/auth/tsconfig.json
@@ -26,7 +26,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "**/*.test.ts"
+    "**/*.test.ts",
+    "../common/src/Declarations"
   ],
   "exclude": ["node_modules"]
 }
