--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,10 +20,11 @@
         "@customer/*": ["apps/customer/src/*"],
         "@common/*": ["apps/common/src/*"],
         "@ui/*": ["packages/ui/*"],
-        "@utils/*": ["packages/utils/src/*"]
+        "@utils/*": ["packages/utils/src/*"],
+        "@public/*": ["packages/public/src/*"]
       }
     },
-    "include": ["apps/*/src", "packages/*/src"],
+    "include": ["apps/*/src", "packages/*/src", "apps/common/src/Declarations"],
     "exclude": ["node_modules"]
   }
   
